--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tfk-saksbehandling-organisasjon-tilskudd-templates",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Templates for the tfk-saksbehandling-organisasjon-tilskudd ecosystem",
   "license": "MIT",
   "author": {
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "test": "standard && nsp check && tap --reporter=spec test/**/*.js",
+    "test-offline": "standard && tap --reporter=spec test/**/*.js",
     "coverage": "tap test/**/*.js --coverage",
     "coveralls": "tap --cov --coverage-report=lcov test/**/*.js && cat coverage/lcov.info | coveralls",
     "setup": "npm install && node setup.js"
