--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=10.12.0"
   },
   "scripts": {
-    "test": "standard && nsp check && tap --reporter=spec test/**/*.js",
+    "test": "standard && npm audit && tap --reporter=spec test/**/*.js",
     "test-offline": "standard && tap --reporter=spec test/**/*.js",
     "coverage": "tap test/**/*.js --coverage",
     "coveralls": "tap --cov --coverage-report=lcov test/**/*.js && cat coverage/lcov.info | coveralls",
@@ -39,7 +39,6 @@
   "devDependencies": {
     "coveralls": "3.0.2",
     "is-file": "1.0.0",
-    "nsp": "3.2.1",
     "standard": "12.0.1",
     "tap": "12.0.1"
   }
